fixed header on mobile chrome

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -12,7 +12,7 @@
         font-family: 'Playfair Display', 'Arial', 'Helvetica', serif;
         font-weight: normal;
         font-style: normal;
-        margin-top: 35%;
+        margin-top: 15%;
         @include desktop {
             margin-top: 15%;
         }
