--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -61,7 +61,6 @@
     top: 80px;
     width: 100%;
     background-color: white;
-    border-top: 1px solid #d7d7d7;
     @include tablet {
         display: flex;
         order: 1;
